--- a/clients/frontend/css/fonts.css
+++ b/clients/frontend/css/fonts.css
@@ -26,42 +26,6 @@
 }
 
 @font-face {
-    font-family: 'Outfit';
-    src: url('../fonts/Outfit-SemiBold.woff2') format('woff2'),
-        url('../fonts/Outfit-SemiBold.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Outfit';
-    src: url('../fonts/Outfit-Bold.woff2') format('woff2'),
-        url('../fonts/Outfit-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Outfit';
-    src: url('../fonts/Outfit-Regular.woff2') format('woff2'),
-        url('../fonts/Outfit-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Outfit';
-    src: url('../fonts/Outfit-Light.woff2') format('woff2'),
-        url('../fonts/Outfit-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
     font-family: 'Oswald';
     src: url('../fonts/Oswald-Light.woff2') format('woff2'),
         url('../fonts/Oswald-Light.woff') format('woff');
@@ -76,6 +40,6 @@
   font-size: small;
 }
 
-.w-14 {
-  width: 3.7rem;
+.w-logo {
+  width: 16%;
 }
